CSS/courses.css
* {
	background-color: rgb(255, 255, 255);
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
	font-weight: 400;
	font-style: bold;
	line-height: 1.2;
	text-align: center;
	vertical-align: middle;
}

body {
	font-family: 'Roboto', Arial, sans-serif;
	font-size: 18px;
	font-weight: 400;
	font-style: normal;
	margin: 10px auto;
	width: 45%;
	line-height: 1.6;
	padding: 10px
}

body.wrapper {
	width: 100%;
	margin: 0px auto;
}

h1#name {
	margin: 0px auto 10px auto
}

nav ul {
	padding: 15px;
	margin: 0px auto 0px auto;
	border-top: 2px solid #000;
	border-bottom: 2px solid #000;
	text-align: center;
}

nav li {
	display: inline;
	margin: 0px, 3px;
}

nav a {
	text-transform: uppercase;
	text-decoration: none;
	text-align: center;
	vertical-align: middle;
	padding: 6px 18px 5px 18px;
	background-color: rgb(255, 255, 255);
	padding: 10px;
	margin: auto;
	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
	font-weight: 400;
	font-style: normal;
}

nav li a.on {
	background-color: black;
	color: white;
}

nav li a:hover {
	color: rgb(55, 214, 175);
}

table {
	width: 600px;
	margin: 0px auto 0px auto;
	empty-cells: hide;
	text-align: center;
	table-layout: fixed;
	border-top: 2px solid #000;
	padding-top: 10px;
	padding-bottom: 10px;
}


th, td {
	padding: 10px 10px 10px 10px;
	width: 150px
}

thead th {
	background-color: lightblue;
}


tbody th {
	background-color: lightgreen;
}

td {
	border: 1px solid #000;
}

